--- a/reveal.js-master/demo.html
+++ b/reveal.js-master/demo.html
@@ -43,8 +43,8 @@
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
-						<h2>Vertical Slides</h2>
-				
+						<h2>Horizontal Slides</h2>
+						<h2>UAS divany djunita 181112035</h2>
 						<br>
 						<a href="#" class="navigate-down">
 							<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="178" height="238" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow">
@@ -56,7 +56,6 @@
 					</section>
 					<section>
 						<h2>Basement Level 2</h2>
-						<p>That's it, time to go back up.</p>
 						<br>
 						<a href="#/2">
 							<img class="r-frame" style="background: rgba(255,255,255,0.1); transform: rotate(180deg);" width="178" height="238" data-src="https://static.slid.es/reveal/arrow.png" alt="Up arrow">
